--- a/TestSSH/WebRoot/WEB-INF/web.xml
+++ b/TestSSH/WebRoot/WEB-INF/web.xml
@@ -12,6 +12,16 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  
+  <filter>
+  <filter-name>OpenSessionInViewFilter</filter-name>
+  <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  <filter-name>OpenSessionInViewFilter</filter-name>
+  <url-pattern>*.action</url-pattern>
+  </filter-mapping>
+  
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:applicationContext.xml</param-value>
